# NMSL-Proj2

NaiveLPR-MainClient/: CharRecognition.cpp  CharRecognition.h  NaiveLPR-MainClient.pro  forgetpassword.cpp  forgetpassword.h  forgetpassword.ui  login.cpp  login.h  login.ui  main.cpp  mainclient.cpp  mainclient.h  mainclient.ui  mainclient_msg.cpp  page_lpr1.cpp  page_lpr2.cpp  ui_forgetpassword.h  ui_login.h  ui_mainclient.h
NaiveLPR-PicServer/: NaiveLPR-PicServer.pro  main.cpp  picserver.cpp  picserver.h  processor.cpp  processor.h  server.cpp  server.h  socketthread.cpp  socketthread.h
NaiveLPR-Server/: ANN-Model-CH.xml  ANN-Model-SP.xml  ANN-Model.xml  CharRecognition.cpp  CharSegment.cpp  NaiveLPR-Server.pro  PlateDetection.cpp  PlateDetection.h  TCPConnection.cpp  TCPConnection.h  forgetpassword.cpp  forgetpassword.h  login.cpp  login.h  main.cpp  myserver.cpp  myserver.h  processor.cpp  processor.h  socketthread.cpp  socketthread.h  sqltool.cpp  sqltool.h  tool.cpp  tool.h
NaiveLPR-SubClient/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  NaiveLPR-SubClient.pro  main.cpp  subclient.cpp  subclient.h  subclient.ui  subclient_msg.cpp  ui_subclient.h
Resources/: background1  background10  background11  background12  background14  background15  background17  background19  background3  background8  background9  (+1 more)
src-server/: CMakeLists.txt  CharRecognition.cpp  CharRecognition.h  CharSegment.cpp  CharSegment.h  PlateDetection.cpp  PlateDetection.h  PlateRecognition.cpp  PlateRecognition.h  PlateRecogonization.cpp  PlateRecogonization.h  main.cpp
